# Sorting-Visualization

./: .gitignore  CMakeLists.txt  README.md  algo.cpp  main  main.cpp  main.out  makefile  sound.cpp  system.cpp
fast/: algorithms.cpp  algoritms.hpp  main.cpp  makefile  renderer.cpp  renderer.hpp  sort_array.cpp  sort_array.hpp
legacy/: main.cpp  makefile
legacy/sounds/: gen_samples.sh
sounds/: gen_samples.sh
src/: algo.cpp  algo.h  beep.cpp  beep.h  main.cpp  makefile  sort_array.cpp  sort_array.h
